--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,41 +1,36 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body {
+  display: grid;
+  grid-template-columns: minmax(100px, 1fr);
+  // grid-template-rows: 60px auto;
+  font-family: $font-stack-primary;
+  background-color: #fff;
+  @include mq("sm") {
+    grid-template-areas: "header" "nav" "main";
+  }
 
-
-body{
-
-    display: grid;
-    grid-template-columns: minmax(100px,1fr);
-    grid-template-rows: 60px auto;
-    font-family: $font-stack-primary;
-    background-color: #fff;
-    @include mq('sm'){
-
-          grid-template-areas: "header" "nav" "main";
-    }
-
-    @include mq('med'){
-        grid-template-columns: 50px 1fr;
-        grid-template-areas: "header header " 
-            "nav main" "nav main";
-    }
-
-
+  @include mq("med") {
+    grid-template-columns: 50px 1fr;
+    grid-template-areas:
+      "header header "
+      "nav main" "nav main";
+  }
 }
 
-
-svg{
-    width: 30px;
-    height: 30px;
+.icon {
+  width: 50px;
+  height: auto;
+  fill: white;
+  padding: 7px;
 }
 
-img{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
-
