--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,43 +1,41 @@
-@mixin flexy($disp:flex,$dir:null,$wrap:null,$just:null){
-
-    display: $disp;
-    flex-direction: $dir;
-    flex-wrap: $wrap;
-    justify-content: $just;
-
+@mixin flexy($disp: flex, $dir: null, $wrap: null, $just: null) {
+  display: $disp;
+  flex-direction: $dir;
+  flex-wrap: $wrap;
+  justify-content: $just;
 }
 
 @mixin mq($break) {
+  $value: map-get(
+    $map: $breakpoints,
+    $key: $break,
+  );
 
-    $value:map-get($map: $breakpoints, $key:$break );
+  $sm: map-get($breakpoints, "sm");
 
-    $sm:map-get($breakpoints,'sm');
-
-
-    @if($value==null){
-
-        @error "`#{break} ` is not a valid breakpoint";
+  @if ($value==null) {
+    @error "`#{break} ` is not a valid breakpoint";
+  } @else if $value<$sm {
+    @media (max-width: $value) {
+      @content;
     }
-    @else if $value<$sm{
-
-        @media(max-width:$value){
-
-            @content;
-        }
+  } @else {
+    @media (min-width: $value) {
+      @content;
     }
-    @else {
-
-        @media (min-width:$value) {
-
-            @content;
-            
-        }
-    }
-    
+  }
 }
 
-
-
 %exemplu {
-    border: 2px solid blue;
+  border: 2px solid blue;
+}
+
+@mixin buttonBehaviour {
+  :hover {
+    background-color: $secondary-background;
+    cursor: pointer;
+  }
+  :active {
+    background-color: $primary-background;
+  }
 }
