--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -16,3 +16,5 @@ $primary-fontColor: #fff;
 $status-green: greenyellow;
 $status-red: red;
 $gray-background: rgb(247, 247, 247);
+
+$button-green: #83c88a;
