--- a/scss/components/_messages.scss
+++ b/scss/components/_messages.scss
@@ -1,3 +1,36 @@
 .messages {
-  //
+  border: 1px solid $gray-color;
+  border-top: 0;
+
+  .messages-container{
+    @include flexy($disp: flex, $dir: column, $just: center);
+    align-items: center;
+    padding: 10px 0;
+
+    input{
+      width: 380px;
+      margin: 15px 0;
+      padding: 10px;
+      background-color: $gray-background;
+      border: 1px solid $gray-color;
+      border-radius: 5px;
+    }
+    textarea{
+      padding: 10px;
+      width: 380px;
+      background-color: $gray-background;
+      border: 1px solid $gray-color;
+      border-radius: 5px;
+    }
+    span{
+      margin: 15px 0;
+      padding: 10px;
+      width: 380px;
+      border-radius: 5px;
+      text-align: center;
+      background-color: $primary-background;
+      color: $primary-fontColor;
+      @include buttonBehaviour;
+    }
+  }
 }
