--- a/scss/components/_recentActivity.scss
+++ b/scss/components/_recentActivity.scss
@@ -1,3 +1,31 @@
 .recent-activity {
-  //
+  border: 1px solid $gray-color;
+  border-top: 0;
+  .recent-activity-cards{
+    @include flexy($disp: flex, $dir: column, $just: center);
+    align-items: center;
+  }
+  .member-card-2{
+    @include flexy($disp: flex, $dir: column, $just: center);
+    align-items: center;
+    border-bottom: 1px solid $gray-color;
+    padding: 10px 0;
+    width: 380px;
+    img{
+      width: 80px;
+      height: auto;
+      margin: 10px 0;
+    }
+    span{
+      text-align: center;
+    }
+    span:nth-child(2){
+      cursor: pointer;
+    }
+
+    &:last-child{
+      border: 0;
+    }
+  }
+
 }
