--- a/scss/components/_settings.scss
+++ b/scss/components/_settings.scss
@@ -1,3 +1,152 @@
 .settings {
-  //
+  padding: 10px 0;
+  .settings-container{
+    @include flexy($disp: flex, $dir: column, $just: null);
+    align-items: center;
+  }
+  .toggle-container{
+    @include flexy($disp: flex, $dir: row, $just: space-between);
+    align-items: center;
+    height: 50px;
+  }
+
+  .settings-container > *{
+    margin: 10px 0;
+    width: 380px;
+  }
+
+  .timeZones{
+    height: 50px;
+    background-color: $gray-background;
+    border-radius: 5px;
+  }
+
+  .setting-buttons{
+    @include flexy($disp: flex, $dir: row, $just: space-between);
+    align-items: center;
+    button{
+      padding: 20px 60px;
+      border-radius: 5px;
+      border: 1px solid $primary-fontColor;
+      background-color: $gray-color;
+      color: $primary-fontColor;
+      @include buttonBehaviour;
+    }
+    button:first-child{
+      background-color: $primary-background;
+      @include buttonBehaviour;
+    }
+  }
+}
+
+
+/* TOGGLE SWITCHES*/
+
+
+.button-cover:before
+{
+    counter-increment: button-counter;
+    content: counter(button-counter);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    color: #d7e3e3;
+    font-size: 12px;
+    line-height: 1;
+    padding: 5px;
+}
+
+.button-cover, .knobs, .layer
+{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.button
+{
+    position: relative;
+    
+    width: 74px;
+    height: 36px;
+    //margin: -20px auto 0 auto;
+    overflow: hidden;
+}
+
+.button.r, .button.r .layer
+{
+    border-radius: 100px;
+}
+
+.button.b2
+{
+    border-radius: 2px;
+}
+
+.checkbox
+{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.knobs
+{
+    z-index: 2;
+}
+
+.layer
+{
+    width: 100%;
+    background-color: $primary-background;
+    transition: 0.3s ease all;
+    z-index: 1;
+    border: 1px solid $gray-color;
+}
+#button-3 .knobs:before
+{
+    content: 'ON';
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 20px;
+    height: 10px;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1;
+    padding: 9px 4px;
+    background-color: $primary-fontColor;
+    border-radius: 50%;
+    transition: 0.3s ease all, left 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15);
+}
+
+#button-3 .checkbox:active + .knobs:before
+{
+    width: 46px;
+    border-radius: 100px;
+}
+
+#button-3 .checkbox:checked:active + .knobs:before
+{
+    margin-left: -26px;
+}
+
+#button-3 .checkbox:checked + .knobs:before
+{
+    content: 'OFF';
+    left: 42px;
+    background-color: $gray-color;
+}
+
+#button-3 .checkbox:checked ~ .layer
+{
+    background-color: $gray-background;
 }
