--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -12,6 +12,7 @@ $primary-background: #7476c0;
 $secondary-background: #4d4d73;
 
 $primary-fontColor: #fff;
+$gray-color: gray;
 
 $status-green: greenyellow;
 $status-red: red;
