--- a/css/style.css
+++ b/css/style.css
@@ -521,4 +521,316 @@ main {
   border-top: 0;
 }
 
+.social-stats {
+  border: 1px solid gray;
+  border-top: 0;
+}
+.social-stats .social-cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.social-stats .facebook, .social-stats .instagram, .social-stats .twitter {
+  border: 1px solid gray;
+  border-radius: 5px;
+  background-color: #f7f7f7;
+  width: 380px;
+  height: 120px;
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.social-stats .social-icon {
+  background-color: #7476c0;
+  margin: 25px 20px 20px 20px;
+  border-radius: 50%;
+  height: 70px;
+  width: 70px;
+  position: relative;
+}
+.social-stats .social-icon svg {
+  height: 40px;
+  width: 40px;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  position: absolute;
+}
+.social-stats .socialPlatform {
+  color: #4d4d73;
+}
+.social-stats .subscriptions {
+  font-size: 50px;
+  font-weight: 300;
+}
+
+.new-members {
+  border: 1px solid gray;
+  border-top: 0;
+}
+.new-members .new-members-cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.new-members .member-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid gray;
+  padding: 10px 0;
+  width: 380px;
+}
+.new-members .member-card img {
+  width: 80px;
+  height: auto;
+  margin: 5px 0;
+}
+.new-members .member-card:last-child {
+  border: 0;
+}
+.new-members span {
+  padding: 3px 0;
+}
+.new-members span:nth-child(3) {
+  color: #7476c0;
+}
+
+.recent-activity {
+  border: 1px solid gray;
+  border-top: 0;
+}
+.recent-activity .recent-activity-cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.recent-activity .member-card-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid gray;
+  padding: 10px 0;
+  width: 380px;
+}
+.recent-activity .member-card-2 img {
+  width: 80px;
+  height: auto;
+  margin: 10px 0;
+}
+.recent-activity .member-card-2 span {
+  text-align: center;
+}
+.recent-activity .member-card-2 span:nth-child(2) {
+  cursor: pointer;
+}
+.recent-activity .member-card-2:last-child {
+  border: 0;
+}
+
+.messages {
+  border: 1px solid gray;
+  border-top: 0;
+}
+.messages .messages-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+}
+.messages .messages-container input {
+  width: 380px;
+  margin: 15px 0;
+  padding: 10px;
+  background-color: #f7f7f7;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+.messages .messages-container textarea {
+  padding: 10px;
+  width: 380px;
+  background-color: #f7f7f7;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+.messages .messages-container span {
+  margin: 15px 0;
+  padding: 10px;
+  width: 380px;
+  border-radius: 5px;
+  text-align: center;
+  background-color: #7476c0;
+  color: #fff;
+}
+.messages .messages-container span:hover {
+  background-color: #4d4d73;
+  border-color: #4d4d73;
+  cursor: pointer;
+}
+.messages .messages-container span:active {
+  background-color: #7476c0;
+  border-color: #7476c0;
+}
+
+.settings {
+  padding: 10px 0;
+}
+.settings .settings-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.settings .toggle-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+}
+.settings .settings-container > * {
+  margin: 10px 0;
+  width: 380px;
+}
+.settings .timeZones {
+  height: 50px;
+  background-color: #f7f7f7;
+  border-radius: 5px;
+}
+.settings .setting-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.settings .setting-buttons button {
+  padding: 20px 60px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  background-color: gray;
+  color: #fff;
+}
+.settings .setting-buttons button:hover {
+  background-color: #4d4d73;
+  border-color: #4d4d73;
+  cursor: pointer;
+}
+.settings .setting-buttons button:active {
+  background-color: #7476c0;
+  border-color: #7476c0;
+}
+.settings .setting-buttons button:first-child {
+  background-color: #7476c0;
+}
+.settings .setting-buttons button:first-child:hover {
+  background-color: #4d4d73;
+  border-color: #4d4d73;
+  cursor: pointer;
+}
+.settings .setting-buttons button:first-child:active {
+  background-color: #7476c0;
+  border-color: #7476c0;
+}
+
+/* TOGGLE SWITCHES*/
+.button-cover:before {
+  counter-increment: button-counter;
+  content: counter(button-counter);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  color: #d7e3e3;
+  font-size: 12px;
+  line-height: 1;
+  padding: 5px;
+}
+
+.button-cover, .knobs, .layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.button {
+  position: relative;
+  width: 74px;
+  height: 36px;
+  overflow: hidden;
+}
+
+.button.r, .button.r .layer {
+  border-radius: 100px;
+}
+
+.button.b2 {
+  border-radius: 2px;
+}
+
+.checkbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.knobs {
+  z-index: 2;
+}
+
+.layer {
+  width: 100%;
+  background-color: #7476c0;
+  transition: 0.3s ease all;
+  z-index: 1;
+  border: 1px solid gray;
+}
+
+#button-3 .knobs:before {
+  content: "ON";
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 20px;
+  height: 10px;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1;
+  padding: 9px 4px;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: 0.3s ease all, left 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15);
+}
+
+#button-3 .checkbox:active + .knobs:before {
+  width: 46px;
+  border-radius: 100px;
+}
+
+#button-3 .checkbox:checked:active + .knobs:before {
+  margin-left: -26px;
+}
+
+#button-3 .checkbox:checked + .knobs:before {
+  content: "OFF";
+  left: 42px;
+  background-color: gray;
+}
+
+#button-3 .checkbox:checked ~ .layer {
+  background-color: #f7f7f7;
+}
+
 /*# sourceMappingURL=style.css.map */
