--- a/scss/components/_newMembers.scss
+++ b/scss/components/_newMembers.scss
@@ -1,3 +1,30 @@
 .new-members {
-  //
+  border: 1px solid $gray-color;
+  border-top: 0;
+  .new-members-cards{
+    @include flexy($disp: flex, $dir: column, $just: center);
+    align-items: center;
+  }
+  .member-card{
+    @include flexy($disp: flex, $dir: column, $just: center);
+    align-items: center;
+    border-bottom: 1px solid $gray-color;
+    padding: 10px 0;
+    width: 380px;
+    img{
+      width: 80px;
+      height: auto;
+      margin: 5px 0;
+    }
+    &:last-child{
+      border: 0;
+    }
+  }
+
+  span{
+    padding: 3px 0;
+  }
+  span:nth-child(3){
+    color: $primary-background;
+  }
 }
