--- a/scss/components/_socialStats.scss
+++ b/scss/components/_socialStats.scss
@@ -10,7 +10,7 @@
     border: 1px solid $gray-color;
     border-radius: 5px;
     background-color: $gray-background;
-    width: 380px;
+    width: $element-width;
     height: 120px;
     margin: 10px;
     @include flexy($disp: flex, $dir: row, $just: null);
