--- a/scss/components/_recentActivity.scss
+++ b/scss/components/_recentActivity.scss
@@ -10,7 +10,7 @@
     align-items: center;
     border-bottom: 1px solid $gray-color;
     padding: 10px 0;
-    width: 380px;
+    width: $element-width;
     img{
       width: 80px;
       height: auto;
