--- a/css/style.css
+++ b/css/style.css
@@ -507,7 +507,7 @@ main {
 }
 
 .chart1 {
-  width: 315px;
+  width: 90%;
   height: auto;
   border-radius: 0;
 }
@@ -535,7 +535,7 @@ main {
   border: 1px solid gray;
   border-radius: 5px;
   background-color: #f7f7f7;
-  width: 315px;
+  width: 90%;
   height: 120px;
   margin: 10px;
   display: flex;
@@ -583,7 +583,7 @@ main {
   align-items: center;
   border-bottom: 1px solid gray;
   padding: 10px 0;
-  width: 315px;
+  width: 90%;
 }
 .new-members .member-card img {
   width: 80px;
@@ -617,7 +617,7 @@ main {
   align-items: center;
   border-bottom: 1px solid gray;
   padding: 10px 0;
-  width: 315px;
+  width: 90%;
 }
 .recent-activity .member-card-2 img {
   width: 80px;
@@ -646,7 +646,7 @@ main {
   padding: 10px 0;
 }
 .messages .messages-container input {
-  width: 315px;
+  width: 90%;
   margin: 15px 0;
   padding: 10px;
   background-color: #f7f7f7;
@@ -655,7 +655,7 @@ main {
 }
 .messages .messages-container textarea {
   padding: 10px;
-  width: 315px;
+  width: 90%;
   background-color: #f7f7f7;
   border: 1px solid gray;
   border-radius: 5px;
@@ -663,7 +663,7 @@ main {
 .messages .messages-container span {
   margin: 15px 0;
   padding: 10px;
-  width: 315px;
+  width: 90%;
   border-radius: 5px;
   text-align: center;
   background-color: #7476c0;
@@ -698,7 +698,7 @@ main {
 }
 .settings .settings-container > * {
   margin: 10px 0;
-  width: 315px;
+  width: 90%;
 }
 .settings .timeZones {
   height: 50px;
