--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,7 +5,7 @@ $breakpoints: (
 );
 
 $font-stack-primary: sans-serif;
-$element-width: 315px;
+$element-width: 90%;  
 //Colors
 
 $primary-background: #7476c0;
