--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -6,6 +6,7 @@ $breakpoints: (
 
 $font-stack-primary: sans-serif;
 $element-width: 90%;  
+$max-element-width: 500px;
 //Colors
 
 $primary-background: #7476c0;
