--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,7 @@ main {
 
 .chart1 {
   width: 90%;
+  max-width: 500px;
   height: auto;
   border-radius: 0;
 }
@@ -536,6 +537,7 @@ main {
   border-radius: 5px;
   background-color: #f7f7f7;
   width: 90%;
+  max-width: 500px;
   height: 120px;
   margin: 10px;
   display: flex;
@@ -584,6 +586,7 @@ main {
   border-bottom: 1px solid gray;
   padding: 10px 0;
   width: 90%;
+  max-width: 500px;
 }
 .new-members .member-card img {
   width: 80px;
@@ -618,6 +621,7 @@ main {
   border-bottom: 1px solid gray;
   padding: 10px 0;
   width: 90%;
+  max-width: 500px;
 }
 .recent-activity .member-card-2 img {
   width: 80px;
@@ -647,6 +651,7 @@ main {
 }
 .messages .messages-container input {
   width: 90%;
+  max-width: 500px;
   margin: 15px 0;
   padding: 10px;
   background-color: #f7f7f7;
@@ -656,6 +661,7 @@ main {
 .messages .messages-container textarea {
   padding: 10px;
   width: 90%;
+  max-width: 500px;
   background-color: #f7f7f7;
   border: 1px solid gray;
   border-radius: 5px;
@@ -664,6 +670,7 @@ main {
   margin: 15px 0;
   padding: 10px;
   width: 90%;
+  max-width: 500px;
   border-radius: 5px;
   text-align: center;
   background-color: #7476c0;
@@ -699,6 +706,7 @@ main {
 .settings .settings-container > * {
   margin: 10px 0;
   width: 90%;
+  max-width: 500px;
 }
 .settings .timeZones {
   height: 50px;
