--- a/scss/components/_messages.scss
+++ b/scss/components/_messages.scss
@@ -9,6 +9,7 @@
 
     input{
       width: $element-width;
+      max-width: $max-element-width;
       margin: 15px 0;
       padding: 10px;
       background-color: $gray-background;
@@ -18,6 +19,7 @@
     textarea{
       padding: 10px;
       width: $element-width;
+      max-width: $max-element-width;
       background-color: $gray-background;
       border: 1px solid $gray-color;
       border-radius: 5px;
@@ -26,6 +28,7 @@
       margin: 15px 0;
       padding: 10px;
       width: $element-width;
+      max-width: $max-element-width;
       border-radius: 5px;
       text-align: center;
       background-color: $primary-background;
