--- a/scss/components/_recentActivity.scss
+++ b/scss/components/_recentActivity.scss
@@ -11,6 +11,7 @@
     border-bottom: 1px solid $gray-color;
     padding: 10px 0;
     width: $element-width;
+    max-width: $max-element-width;
     img{
       width: 80px;
       height: auto;
