--- a/scss/components/_socialStats.scss
+++ b/scss/components/_socialStats.scss
@@ -11,6 +11,7 @@
     border-radius: 5px;
     background-color: $gray-background;
     width: $element-width;
+    max-width: $max-element-width;
     height: 120px;
     margin: 10px;
     @include flexy($disp: flex, $dir: row, $just: null);
