--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,11 +9,23 @@
 //components
 
 //https://necolas.github.io/normalize.css/8.0.1/normalize.css --> CSS Normalizer for base/reset
-@import "base/reset", "base/base";
+@import "base/reset", 
+        "base/base";
 
-@import "layout/header", "layout/nav", "layout/main";
+@import "layout/header", 
+        "layout/nav", 
+        "layout/main";
 
-@import "components/statusBar", "components/dashboard", "components/alert",
-  "components/traffic", "components/dailyTraffic", "components/mobileUser",
-  "components/socialStats", "components/newMembers", "components/recentActivity",
-  "components/messages", "components/settings";
+@import "components/statusBar", 
+        "components/dashboard", 
+        "components/alert",
+        "components/traffic", 
+        "components/dailyTraffic", 
+        "components/mobileUser",
+        "components/socialStats", 
+        "components/newMembers", 
+        "components/recentActivity",
+        "components/messages", 
+        "components/settings";
+
+
