--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+.mobile-graph, .daily-graph, .traffic-graph {
+  max-width: 100%;
+  padding: 10px;
+}
+@media (min-width: 768px) {
+  .mobile-graph, .daily-graph, .traffic-graph {
+    max-width: 90%;
+  }
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -405,10 +415,25 @@ nav {
   transition: 0.1s ease;
 }
 
+@media screen and (min-width: 768px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+}
 main {
   grid-area: main;
 }
 
+@media screen and (min-width: 768px) {
+  .d-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+}
 .status-bar {
   display: flex;
   flex-direction: row;
@@ -458,6 +483,11 @@ main {
   background-color: #f7f7f7;
 }
 
+@media (min-width: 768px) {
+  .dashboard {
+    justify-content: space-between;
+  }
+}
 .alert {
   padding: 15px 30px;
   overflow: hidden;
@@ -469,6 +499,8 @@ main {
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
+  max-width: 800px;
+  margin: 0 auto;
 }
 .alert .alertBtn:hover {
   background-color: #4d4d73;
@@ -484,10 +516,17 @@ main {
 }
 
 .moveRight {
-  transform: translateX(110%);
+  transform: translateX(200%);
   transition: 0.8s ease;
 }
 
+.traffic-graph {
+  margin: 0 auto;
+}
+
+.traffic {
+  width: 100%;
+}
 .traffic .buttons {
   display: flex;
   flex-direction: row;
@@ -506,23 +545,40 @@ main {
   color: #fff;
 }
 
-.traffic-chart {
-  margin: 0 auto;
-  width: 90%;
-}
-
 .daily-traffic {
   border: 1px solid gray;
 }
 
+@media screen and (min-width: 768px) {
+  .daily-traffic {
+    width: 50%;
+    display: inline-block;
+    border-top: 1px solid gray;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid gray;
+  }
+}
 .mobile-user {
   border: 1px solid gray;
   border-top: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .mobile-user {
+    width: 50%;
+    display: inline-block;
+    border-top: 1px solid gray;
+    border-left: 1px solid gray;
+    border-right: 0;
+    border-bottom: 1px solid gray;
+  }
+}
 .social-stats {
   border: 1px solid gray;
   border-top: 0;
+  border-left: 0;
+  max-width: 100%;
 }
 .social-stats .social-cards {
   display: flex;
@@ -535,7 +591,7 @@ main {
   border-radius: 5px;
   background-color: #f7f7f7;
   width: 90%;
-  max-width: 500px;
+  max-width: 300px;
   height: 120px;
   margin: 10px;
   display: flex;
@@ -562,13 +618,33 @@ main {
   color: #4d4d73;
 }
 .social-stats .subscriptions {
-  font-size: 50px;
+  font-size: 2.8rem;
   font-weight: 300;
 }
 
+@media screen and (min-width: 768px) {
+  .social-cards {
+    display: flex;
+    flex-direction: row !important;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .facebook, .instagram, .twitter {
+    min-width: 280px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .social-cards {
+    display: flex;
+    justify-content: space-evenly !important;
+  }
+}
 .new-members {
   border: 1px solid gray;
   border-top: 0;
+  border-left: 0;
 }
 .new-members .new-members-cards {
   display: flex;
@@ -584,7 +660,7 @@ main {
   border-bottom: 1px solid gray;
   padding: 10px 0;
   width: 90%;
-  max-width: 500px;
+  max-width: 300px;
 }
 .new-members .member-card img {
   width: 80px;
@@ -594,16 +670,52 @@ main {
 .new-members .member-card:last-child {
   border: 0;
 }
+.new-members .member-card .card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.new-members .member-card .card-content .card-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.new-members .member-card .card-content .card-info :nth-child(2) {
+  color: #7476c0;
+}
 .new-members span {
   padding: 3px 0;
 }
-.new-members span:nth-child(3) {
-  color: #7476c0;
-}
 
+@media screen and (min-width: 768px) {
+  .member-card {
+    display: flex;
+    flex-direction: row !important;
+    justify-content: space-between !important;
+    max-width: 100% !important;
+  }
+
+  .card-content {
+    display: flex;
+    flex-direction: row !important;
+    justify-content: space-between !important;
+  }
+  .card-content span {
+    display: block;
+    margin: 10px;
+  }
+
+  .card-info {
+    padding: 10px;
+    align-items: flex-start !important;
+  }
+}
 .recent-activity {
   border: 1px solid gray;
   border-top: 0;
+  border-left: 0;
 }
 .recent-activity .recent-activity-cards {
   display: flex;
@@ -619,7 +731,7 @@ main {
   border-bottom: 1px solid gray;
   padding: 10px 0;
   width: 90%;
-  max-width: 500px;
+  max-width: 300px;
 }
 .recent-activity .member-card-2 img {
   width: 80px;
@@ -629,16 +741,43 @@ main {
 .recent-activity .member-card-2 span {
   text-align: center;
 }
-.recent-activity .member-card-2 span:nth-child(2) {
-  cursor: pointer;
-}
 .recent-activity .member-card-2:last-child {
   border: 0;
 }
+.recent-activity .member-info-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.recent-activity .member-info-2 :nth-child(1) {
+  cursor: pointer;
+}
 
+@media screen and (min-width: 768px) {
+  .member-card-2 {
+    min-width: 90%;
+    display: flex;
+    flex-direction: row !important;
+    justify-content: flex-start !important;
+    align-items: center;
+  }
+
+  .member-info-2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start !important;
+    margin: 10px 0 10px 20px;
+  }
+  .member-info-2 span {
+    padding: 5px 0;
+  }
+}
 .messages {
   border: 1px solid gray;
   border-top: 0;
+  border-left: 0;
 }
 .messages .messages-container {
   display: flex;
@@ -649,7 +788,7 @@ main {
 }
 .messages .messages-container input {
   width: 90%;
-  max-width: 500px;
+  max-width: 300px;
   margin: 15px 0;
   padding: 10px;
   background-color: #f7f7f7;
@@ -659,7 +798,7 @@ main {
 .messages .messages-container textarea {
   padding: 10px;
   width: 90%;
-  max-width: 500px;
+  max-width: 300px;
   background-color: #f7f7f7;
   border: 1px solid gray;
   border-radius: 5px;
@@ -668,7 +807,7 @@ main {
   margin: 15px 0;
   padding: 10px;
   width: 90%;
-  max-width: 500px;
+  max-width: 300px;
   border-radius: 5px;
   text-align: center;
   background-color: #7476c0;
@@ -684,10 +823,15 @@ main {
   border-color: #7476c0;
 }
 
+@media screen and (min-width: 768px) {
+  .messages {
+    min-width: 50%;
+  }
+}
 .settings {
   border: 1px solid gray;
   border-top: 0;
-  padding: 10px 0;
+  border-left: 0;
 }
 .settings .settings-container {
   display: flex;
@@ -704,7 +848,7 @@ main {
 .settings .settings-container > * {
   margin: 10px 0;
   width: 90%;
-  max-width: 500px;
+  max-width: 300px;
 }
 .settings .timeZones {
   height: 50px;
@@ -840,6 +984,12 @@ main {
 
 #button-3 .checkbox:checked ~ .layer {
   background-color: #f7f7f7;
+}
+
+@media screen and (min-width: 768px) {
+  .settings {
+    min-width: 50%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
