--- a/scss/components/_socialStats.scss
+++ b/scss/components/_socialStats.scss
@@ -1,6 +1,8 @@
 .social-stats {
   border: 1px solid $gray-color;
   border-top: 0;
+  border-left: 0;
+  max-width: 100%;
   .social-cards{
     @include flexy($disp: flex, $dir: column, $wrap: null, $just: center);
     align-items: center;
@@ -38,7 +40,26 @@
     color: $secondary-background;
   }
   .subscriptions{
-    font-size: 50px;
+    font-size: 2.8rem;
     font-weight: 300;
+  }
+}
+
+
+@media screen and (min-width:768px){
+  .social-cards{
+    @include flexy($disp: flex, $dir: row!important, $wrap: wrap, $just: center);
+    align-items: center;
+    
+  }
+
+  .facebook,.instagram,.twitter{
+    min-width: 280px;
+  }
+}
+
+@media screen and (min-width: 1024px){
+  .social-cards{
+    @include flexy($just: space-evenly!important);
   }
 }
