--- a/scss/components/_traffic.scss
+++ b/scss/components/_traffic.scss
@@ -1,4 +1,11 @@
+
+.traffic-graph{
+  @extend %w-100;
+  margin: 0 auto;
+}
 .traffic {
+
+  width: 100%;
   .buttons {
     @include flexy($disp: flex, $dir: row, $wrap: null, $just: space-evenly);
     align-items: center;
@@ -15,7 +22,16 @@
     padding: 0.5em;
     color: $primary-fontColor;
   }
+
+  // &-chart{
+
+  // }
 }
+
+
+
+
+
 // .traffic-chart{
 //   width: $element-width;
 //   max-width: $max-element-width;
@@ -24,7 +40,7 @@
 // }
 
 
-.traffic-chart{
-  margin: 0 auto;
-  width: 90%;
-}
+// .traffic-chart{
+//   margin: 0 auto;
+//   width: 90%;
+// }
