--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -15,3 +15,14 @@ nav {
   transform: scale(1);
   transition: 0.1s ease;
 }
+
+
+@media screen and (min-width:768px){
+
+  nav{
+
+    @include flexy($dir: column, $just: flex-start);
+
+  }
+  
+}
